显示商品列表

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,3 +6,5 @@ spring:
     url: jdbc:mysql://106.14.149.59/wxdc?characterEncoding=utf-8&useSSL=false
   jpa:
     show-sql: true
+server:
+  context-path: /wxdc
