--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
   jackson:
     default-property-inclusion: non_null #返回到前端的json中不包含为null的属性
 server:
-  context-path: /wxdc
+  context-path: /sell
 wechat:
   mpAppId: wxd898fcb01713c658
   mpAppSecret: 47ccc303338cee6e62894fxxxxxxxxxxx
