--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,8 @@ spring:
     show-sql: true
   jackson:
     default-property-inclusion: non_null #返回到前端的json中不包含为null的属性
+  #freemarker:
+  #  request-context-attribute: request
 server:
   context-path: /sell
 wechat:
