--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,9 @@ spring:
     show-sql: true
   jackson:
     default-property-inclusion: non_null #返回到前端的json中不包含为null的属性
+  redis:
+    host: 106.14.149.59
+    port: 6379
   #freemarker:
   #  request-context-attribute: request
 server:
@@ -23,5 +26,12 @@ wechat:
   notifyUrl: http://sell.natapp4.cc/sell/pay/notify  #异步通知地址
   templateId:
     orderStatus: e-Cqq67QxD6YNI41iRiqawEYdFavW_7pc7LyEMb-yeQ
+
+projectURL:
+  wechatMpAuthorize: http://sell.natapp4.cc
+  wechatOpenAuthorize: http://sell.natapp4.cc
+  sell: http://localhost:8080
+
+
 
 
